--- a/src/css/style.css
+++ b/src/css/style.css
@@ -98,126 +98,70 @@
   height: 130vh;
   box-shadow: 0px 15px 114px 55px #092363;
 }
+.flex-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+}
 
-.progress {
-  margin: 50px auto;
-  text-align: center;
+.single-chart {
+  width: 15%;
+  justify-content: space-around ;
 }
-.progress > .loader {
-  color: #4cd964;
-  display: inline-block;
-  font-family: monospace;
-  font-weight: bolder;
-  margin: 50px;
-  position: relative;
-  text-align: center;
+
+.circular-chart {
+  display: block;
+  margin: 10px auto;
+  max-width: 80%;
+  max-height: 250px;
 }
-.progress > .loader:after {
-  content: attr(data-percent);
-  font-size: 12px;
-  left: 0;
-  line-height: 12px;
-  margin-top: -6px;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.progress svg {
-  height: 100px;
-  width: 100px;
-}
-.progress svg:last-child {
-  left: 0;
-  position: absolute;
-  top: 0;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-.progress svg:last-child circle {
+
+.circle-bg {
   fill: none;
-  stroke: #fff;
-  stroke-dasharray: 629;
-  stroke-width: 12;
-  -webkit-animation: progress-loader 2.4s 1;
-  animation: progress-loader 2.4s 1;
+  stroke: #eee;
+  stroke-width: 3.8;
 }
 
-@-webkit-keyframes progress-loader {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-@-moz-keyframes progress-loader {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes progress-loader {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-.progress {
-  margin: 50px auto;
-  text-align: center;
-}
-.progress > .loader {
-  color: #4cd964;
-  display: inline-block;
-  font-family: monospace;
-  font-weight: bolder;
-  margin: 50px;
-  position: relative;
-  text-align: center;
-}
-.progress > .loader:after {
-  content: attr(data-percent);
-  font-size: 12px;
-  left: 0;
-  line-height: 12px;
-  margin-top: -6px;
-  position: absolute;
-  text-align: center;
-  top: 50%;
-  width: 100%;
-}
-.progress svg {
-  height: 100px;
-  width: 100px;
-}
-.progress svg:last-child {
-  left: 0;
-  position: absolute;
-  top: 0;
-  -webkit-transform: rotate(-90deg);
-  -ms-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-}
-.progress svg:last-child circle {
+.circle {
   fill: none;
-  stroke: #fff;
-  stroke-dasharray: 629;
-  stroke-width: 12;
-  -webkit-animation: progress-loader 2.4s 1;
-  animation: progress-loader 2.4s 1;
+  stroke-width: 2.8;
+  stroke-linecap: round;
+  animation: progress 3s ease-out forwards;
 }
 
-@-webkit-keyframes progress-loader {
+@keyframes progress {
   0% {
-    stroke-dashoffset: 0;
-  }
-}
-@-moz-keyframes progress-loader {
-  0% {
-    stroke-dashoffset: 0;
-  }
-}
-@keyframes progress-loader {
-  0% {
-    stroke-dashoffset: 0;
+    stroke-dasharray: 0 100;
   }
 }
 
-/*# sourceMappingURL=style.css.map */
+.circular-chart.orange .circle {
+  stroke: orangered;
+}
+.circular-chart.purple .circle {
+  stroke: purple;
+}
+.circular-chart.red .circle {
+  stroke:red;
+}
+.circular-chart.gold .circle {
+  stroke: gold;
+}
+.circular-chart.black .circle {
+  stroke:black;
+}
+
+.circular-chart.green .circle {
+  stroke: #4CC790;
+}
+
+.circular-chart.blue .circle {
+  stroke: #3c9ee5;
+}
+
+.percentage {
+  fill:white;
+  font-family: sans-serif;
+  font-size: 4px;
+  text-anchor: middle;
+  
+}
