--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,99 +1,115 @@
-.wihdsect{
-    background-color: #f5f5f5;
+.wihdsect {
+  background-color: #f5f5f5;
 }
-.space-70{
-    padding-top: 70px;
-    padding-bottom: 70px;
+
+.space-70 {
+  padding-top: 70px;
+  padding-bottom: 70px;
 }
-.section-title{
-    color: #37414c;
-    font-size: 36px;
-    padding-bottom: 10px;
-    text-transform: capitalize;
+
+.section-title {
+  color: #37414c;
+  font-size: 36px;
+  padding-bottom: 10px;
+  text-transform: capitalize;
 }
-.title-wihd{
-    display: inline-block;
-    width: 100%;
-    vertical-align: middle;
-    text-align: center;
+
+.title-wihd {
+  display: inline-block;
+  width: 100%;
+  vertical-align: middle;
+  text-align: center;
 }
-.pwhid{ 
-    font-family:'raleway'sans-serif;
-    color: #6e7882;
+
+.pwhid {
+  font-family: 'raleway'sans-serif;
+  color: #6e7882;
 }
-.space-20{
-    padding-bottom: 20px;
-    padding-top: 20px;
-    
+
+.space-20 {
+  padding-bottom: 20px;
+  padding-top: 20px;
+
 }
-.my-work-icon{
-    border: 1px solid #d2dce6;
-    border-radius: 4em;
-    display: inline-block;
-    font-size: 34px;
-    height: 100px;
-    line-height: 100px;
-    position: relative;
-    text-align: center;
-    width: 100px;
-    margin-bottom: 30px;
+
+.my-work-icon {
+  border: 1px solid #d2dce6;
+  border-radius: 4em;
+  display: inline-block;
+  font-size: 34px;
+  height: 100px;
+  line-height: 100px;
+  position: relative;
+  text-align: center;
+  width: 100px;
+  margin-bottom: 30px;
 }
 
 
-.pointille{
-    font-size: 14px;
-    margin: 0 auto;
-    position: relative;
-    text-align: center;
+.pointille {
+  font-size: 14px;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
 }
 
 
 
-.buttonhigh:hover{
-    background-color:gold;
-    
+.buttonhigh:hover {
+  background-color: gold;
+
 }
 
 
 .gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-    -webkit-column-width: 33%;
-    -moz-column-width: 33%;
-    column-width: 33%; }
-    .gallery .pics {
-    -webkit-transition: all 350ms ease;
-    transition: all 350ms ease; }
-    .gallery .animation {
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    transform: scale(1); }
-    
-    @media (max-width: 450px) {
-    .gallery {
+  -webkit-column-count: 3;
+  -moz-column-count: 3;
+  column-count: 3;
+  -webkit-column-width: 33%;
+  -moz-column-width: 33%;
+  column-width: 33%;
+}
+
+.gallery .pics {
+  -webkit-transition: all 350ms ease;
+  transition: all 350ms ease;
+}
+
+.gallery .animation {
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+@media (max-width: 450px) {
+  .gallery {
     -webkit-column-count: 1;
     -moz-column-count: 1;
     column-count: 1;
     -webkit-column-width: 100%;
     -moz-column-width: 100%;
     column-width: 100%;
-    }
-    }
-    
-    @media (max-width: 400px) {
-    .btn.filter {
+  }
+}
+
+@media (max-width: 400px) {
+  .btn.filter {
     padding-left: 1.1rem;
     padding-right: 1.1rem;
-    }
-    }
+  }
+}
 
 
 
-.bgskills{
-    background-image: url("../img/Workharder.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 130vh;
-    box-shadow: 0px 15px 114px 55px rgb(9, 35, 99);
+.bgskills {
+  background-image: url("../img/Workharder.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 130vh;
+  box-shadow: 0px 15px 114px 55px rgb(9, 35, 99);
+}
+
+
+.footerpol {
+  color: #37414c;
 }
