--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,8 @@
+html{
+  scroll-behavior: smooth;
+}
+
+
 .wihdsect {
   background-color: #f5f5f5;
 }
@@ -113,3 +118,4 @@
 .footerpol {
   color: #37414c;
 }
+
